@@ -3,6 +3,8 @@ Changelog
 
 1.6 - (unreleased)
 -----------------
+ * Bug fix: Change provider_url and dataset_url to use StringField instead of LinesField, 
+       also use new filtering select widget [tiberich #3530]
  * Show indicator codes in title [demarant]
  * Change: show TOC and generic metadata section on indicator factsheet as in assessments
  * Feature: tags/keywords for an assessment is now calculated dynamically
